<resources>
    <string name="app_name">Beer Journal</string>
    <string name="add_beer_title">Add A Beer</string>
    <string name="edit_beer_title">Edit Beer</string>

    <!-- Adapter strings-->
    <string name="default_field_string">Unknown</string>
    <string name="adapter_beer_type">%1$s%2$s</string>
    <string name="adapter_brewery">%1$s, %2$s</string>
    <string name="adapter_rating">%1s/5</string>

    <!--Options menu strings-->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_sort_order">Sort Order</string>
    <string name="action_asc_desc">Asc/Desc</string>

    <!--Strings for sort order radio menu-->
    <string name="sort_beer_name">Beer Name</string>
    <string name="sort_beer_type">Beer Type</string>
    <string name="sort_beer_location">Brewery Location</string>
    <string name="sort_beer_rating">Rating</string>
    <string name="sort_beer_date">Tasting Date</string>
    <string name="sort_beer_percentage">Alcohol Percentage</string>
    <string name="sort_beer_bitterness">Bitterness</string>

    <!--Preferences keys-->
    <string name="preference_sort_order">sortOrder</string>
    <string name="preference_sort_asc_desc">ascDesc</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>


    <!--Add beer strings-->
    <string name="add_beer_name">Beer Name</string>
    <string name="add_beer_type">Beer Type</string>
    <string name="add_beer_stats">Beer Stats</string>
    <string name="add_beer_brewery">Brewery</string>
    <string name="add_beer_brewery_name">Brewery Name</string>
    <string name="add_beer_location">Location</string>
    <string name="add_beer_comments">Comments</string>
    <string name="add_beer_rating">Rating</string>
    <string name="add_beer_photo">Photo</string>
    <string name="add_beer_date">Date</string>
    <string name="add_beer_percentage">Alcohol percentage</string>
    <string name="add_beer_percent_symbol">%</string>
    <string name="add_beer_bitterness">Bitterness</string>
    <string name="add_beer_IBU">IBU</string>
    <string name="add_beer_button">Add Beer</string>
    <string name="add_beer_take_photo">ADD PHOTO</string>

    <!--Form hints-->
    <string name="add_beer_city">City</string>
    <string name="add_beer_state">State/Province</string>
    <string name="add_beer_country">Country</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_beer_successful">Beer deleted</string>
    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_beer_failed">Error with deleting Beer</string>
    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this Beer?</string>
    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="photo_save_failed">Photo failed to save to disk.</string>


    <!--Beer types-->
    <string name="other">Other</string>
    <string name="apa">American Pale Ale</string>
    <string name="pale_ale">Pale Ale</string>
    <string name="ipa">India Pale Ale</string>
    <string name="porter">Porter</string>
    <string name="stout">Stout</string>
    <string name="lager">Lager</string>
    <string name="ale">Ale</string>
    <string name="red_ale">Red Ale</string>
    <string name="brown_ale">Brown Ale</string>
    <string name="amber_ale">Amber Ale</string>
    <string name="pilsner">Pilsner</string>
    <string name="hefe">Hefeweizen</string>
    <string name="wheat_beer">Wheat Beer</string>
    <string name="dark_lager">Dark Lager</string>
    <string name="sour">Sour Beer</string>
    <string name="beer_not_chosen">---</string>
    <string name="unknown">Unknown</string>
    <string name="an_image_of_a_beer">An image of a beer</string>
    <string name="no_photo">No Photo</string>


    <!-- These are the options displayed in the rating drop-down Spinner -->
    <string-array name="array_rating_options">
        <item>@string/beer_not_chosen</item>
        <item>5.0</item>
        <item>4.5</item>
        <item>4.0</item>
        <item>3.5</item>
        <item>3.0</item>
        <item>2.5</item>
        <item>2.0</item>
        <item>1.5</item>
        <item>1.0</item>
        <item>0.5</item>
        <item>0.0</item>
    </string-array>

</resources>

