<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addBeerActivity.AddBeerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="16dp"
                android:paddingLeft="0dp"
                android:paddingEnd="16dp"
                android:paddingStart="0dp">

                <ImageView
                    android:id="@+id/image_beer_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:adjustViewBounds = "true"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/an_image_of_a_beer"
                    android:visibility="gone"
                    tools:visibility="gone"
                    />

                <TextView
                    android:id="@+id/default_image"
                    android:text="@string/add_beer_take_photo"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:background="@drawable/photo_background"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:paddingTop="60dp"
                    android:paddingBottom="60dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:contentDescription="@string/an_image_of_a_beer"
                    android:visibility="visible"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/add_beer_take_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_beer_take_photo"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:paddingBottom="0dp"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_beer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_beer_name"
                    android:inputType="textCapWords"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="30"
                        android:layout_height="wrap_content"
                        android:text="@string/add_beer_type"
                        style="@style/AddBeer_TextStyle"/>

                    <Spinner
                        android:id="@+id/spinner_beer_type"
                        android:layout_width="0dp"
                        android:layout_weight="40"
                        android:layout_height="match_parent"
                        android:spinnerMode="dropdown"
                        android:entries="@array/array_beer_type_options"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/edit_beer_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_beer_type"
                    android:inputType="textCapWords"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="30"
                        android:layout_height="wrap_content"
                        android:text="@string/add_beer_rating"
                        style="@style/AddBeer_TextStyle"/>

                    <Spinner
                        android:id="@+id/spinner_beer_rating"
                        android:layout_width="0dp"
                        android:layout_weight="40"
                        android:layout_height="match_parent"
                        android:spinnerMode="dropdown"
                        android:entries="@array/array_rating_options"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_beer_percentage"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_beer_percentage"
                        android:inputType="numberDecimal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_beer_percent_symbol"
                        style="@style/AddBeer_TextStyle"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_beer_bitterness"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_beer_bitterness"
                        android:inputType="number"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_beer_IBU"
                        style="@style/AddBeer_TextStyle"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/add_beer_brewery"
                android:paddingTop="10dp"
                style="@style/AddBeer_TextStyle"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_brewery_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_beer_brewery_name"
                    android:inputType="textCapWords"/>

                <EditText
                    android:id="@+id/edit_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_beer_city"
                    android:inputType="textCapWords"/>

                <EditText
                    android:id="@+id/edit_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_beer_state"
                    android:inputType="textCapWords"/>

                <EditText
                    android:id="@+id/edit_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_beer_country"
                    android:inputType="textCapWords"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/add_beer_comments"
                style="@style/AddBeer_TextStyle"/>

            <EditText
                android:id="@+id/edit_beer_comments"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:hint="@string/add_beer_comments"
                android:inputType="textMultiLine"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/add_beer_date"
                style="@style/AddBeer_TextStyle"/>

            <TextView
                android:id="@+id/edit_date"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingLeft="5dp"
                tools:text="23/05/2017"/>



        </LinearLayout>

    </LinearLayout>
</ScrollView>
